[package]
name = "avagarden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
std = ["once_cell", "parking_lot"]
alloc = []

[dependencies]
once_cell = { version = "1", optional = true }
spin = { version = "0.9", features = ["rwlock", "mutex", "lazy"] }
parking_lot = { version = "0.12", optional = true }
